--- a/index.html
+++ b/index.html
@@ -35,6 +35,11 @@
     </style>
 </head>
 <body>
+    <audio controls autoplay muted>
+        <source src="lv_0_20231113201523.mp3" type="audio/mp3">
+        Your browser does not support the audio element.
+    </audio>
+
     <h1 id="diwali">Happy Diwali</h1>
     <canvas id="canvas">Canvas is not supported in your browser.</canvas>
     <script>
